# Force_Chain_Finder_Public

forceChains-main/: CMakeLists.txt  FCF-Public-V.1 Documentation.md  README.md  readme.md
forceChains-main/examples/: 1-single.cpp  2-filter.cpp  3-batch.cpp  4-moving.cpp
forceChains-main/liggghtsResult/: input_parameters.txt  input_parameters_batch.txt
forceChains-main/liggghtsResult/batch_compression_2d/alpha_pi_2/: forceChains_0.csv  forceChains_1000.csv  forceChains_1000.vtp  forceChains_1500.csv  forceChains_1500.vtp  forceChains_2000.csv  forceChains_2000.vtp  forceChains_2500.csv  forceChains_2500.vtp  forceChains_3000.csv  forceChains_3000.vtp  forceChains_3500.csv  forceChains_3500.vtp  forceChains_4000.csv  forceChains_4000.vtp  forceChains_500.csv  forceChains_500.vtp
forceChains-main/liggghtsResult/batch_compression_2d/alpha_pi_4/: forceChains_1000.csv  (+15 more)
forceChains-main/liggghtsResult/fabricated/: forceChains.csv  forceChains.vtp  pair_test_1.txt  test_1.liggghts
forceChains-main/python/: chainAngleHist.ipynb  forceChains_1.vtp  forceChains_2.vtp  forceChains_3.vtp  forceChains_peters.vtp  network.vtp  network_comp.vtp  network_shear.vtp  network_shear_1.vtp  network_shear_2.vtp  network_shear_pi_6.vtp  network_shear_pi_8.vtp  visualise_chains.ipynb  writeNodesEdges.py
forceChains-main/src/: chainFinder.h  chainFinder_1.h  chainsIo.h  fileNameCreator.h  filter.h  liggghtsReader.h  particle.h  periodicCorrection.h  precision.h  regression.h  sectionFilter.h  stat.h  userInterface.h  vectorAngle.h
forceChains-main/src/pybind/: userinterface.cpp
(+70 files in other folders)
